# filesplitter

./: .gitignore  NAMING.md  README.md  pyproject.toml  requirements.in  requirements.txt
filesplitter/: clustering.py  db.py  dv8.py  graph.py  ilp.py  loading.py  naming.py  subjects.py  validate.py
filesplitter/queries/: _prelude.sql  fetch_candidate_files.sql  fetch_entities_by_name.sql  fetch_outgoing_type_names.sql  fetch_refs.sql  fetch_touches.sql
notebooks/: Attempt.ipynb  Attempt2.ipynb  DSM.ipynb  FindCandidates.ipynb  JDeo.ipynb  Naming.ipynb  Naming2.ipynb  ValidateSubjects.ipynb
