# This is a useful reference: https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[project]
name = "filesplitter"
version = "0.0.1"
description = "An experimental tool that breaks apart god files"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Jason Lefever", email = "jason.titus.lefever@gmail.com" }
]
dependencies = [
  "numpy==1.24.2",
  "pandas==2.0.0",
  "jupyterlab==3.6.3"
]
